5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1800_2572.log
== TEST (2019-06-09 15:44:11) 
-- CODE:
from numpy import *
v1=array(eval(input()))
par=0
impar=0
j=0
k=0
for i in range(size(v1)):
	if(v1[i]%2==0):
		par=par+1
	else:
		impar=impar+1
v2=zeros(impar,dtype=int)
while(j<size(v1)):
	if(v1[j]%2!=0):
		v2[k]=v1[j]
		k=k+1
	else:
	j=j+1
print((v2))
-- ERROR:
File "XXXX", line 18
    j=j+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:44:35) 
-- CODE:
from numpy import *
v1=array(eval(input()))
par=0
impar=0
j=0
k=0
for i in range(size(v1)):
	if(v1[i]%2==0):
		par=par+1
	else:
		impar=impar+1
v2=zeros(impar,dtype=int)
while(j<size(v1)):
	if(v1[j]%2!=0):
		v2[k]=v1[j]
		k=k+1
	j=j+1
print((v2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:45:12) 
-- CODE:
from numpy import *
v1=array(eval(input()))
par=0
impar=0
j=0
k=0
for i in range(size(v1)):
	if(v1[i]%2==0):
		par=par+1
	else:
		impar=impar+1
v2=zeros(impar,dtype=int)
while(j<size(v1)):
	if(v1[j]%2!=0):
		v2[k]=v1[j]
		k=k+1
	j=j+1
print((v2))
-- EXECUTION TIME:
0.976079
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
